# remember

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  generate-concepts.bash  package.json
docs/: deployment.md  design.md  pi-settings-configuration.md
docs/images/: key-art-prompt.md
extension/: README.md
extension/pi/: README.md  client.ts  index.ts
helm/remember/: Chart.yaml  values.yaml
k8s/base/: hpa.yaml  ingress.yaml  pdb.yaml  secret-example.yaml  server-deployment.yaml  server-service.yaml
k8s/webui/: webui-deployment.yaml  webui-service.yaml
okf/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  detect-drift.bash  generate-concepts.bash  index.md  server.md  webui.md
okf/auth/: api_key.md  authentik.md  base.md  (+8 more)
server/: .dockerignore  .env.example  .pre-commit-config.yaml  Containerfile  Dockerfile  README.md  alembic.ini  config.example.yaml  pyproject.toml
server/.github/workflows/: okf-drift.yml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_unique_provider_id.py
server/okf/: detect-drift.bash
server/remember/: __init__.py  cli.py  config.py  db.py  metrics.py  migrations.py  models.py  server.py  web.py
server/remember/auth/: __init__.py  api_key.py  authentik.py  base.py  dev.py  dex.py  github.py  google.py  keycloak.py  microsoft.py  middleware.py  tailscale.py
server/remember/tools/: __init__.py  archive.py  confirm.py  get.py  list.py  refute.py  save.py  search.py  search_vector.py  stale.py  verify.py
server/tests/: conftest.py  dev_test_webui.py  test_auth.py  test_auth_extended.py  test_authorization.py  test_cli.py  test_config.py  test_db.py  test_metrics.py  test_migrations.py  test_models.py  test_server.py  test_server_security.py  test_tools.py  test_web.py  test_web_auth.py
server/webui/: app.js  index.html  styles.css  utils.js
server/webui/tests/: test_utils.test.mjs
webui/: index.html  styles.css
(+118 files in other folders)
